completed tab Lop